kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ripplr-service
spec:
  selector:
    app: ripplr-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
