kube/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ripplr-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: ripplr-letsencrypt
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
spec:
  tls:
  - hosts:
    - api.ripplr.io
    secretName: ripplr-api-tls
  rules:
  - host: api.ripplr.io
    http:
      paths:
      - backend:
          serviceName: ripplr-api-service
          servicePort: 80
